--- a/index.html
+++ b/index.html
@@ -14,100 +14,140 @@
     <link rel="stylesheet" href="style.css" />
     <title>Font Face</title>
   </head>
-  <body>
+  <body class="body">
     <header>
       <div class="Documentation">
         <p>ENG</p>
         <p>Documentation / Who's using</p>
-        <img src="images/company-logo-black.svg" alt="фото логотипа компании" />
+        <img
+          class="img-logo"
+          src="images/company-logo-black.svg"
+          alt="фото логотипа компании"
+        />
       </div>
     </header>
 
-    <main>
-      <div class="title-text">
-        <h2 class="title">Introduction</h2>
-        <sup class="subtitle"> Chapter 1</sup>
-      </div>
-      <p class="text">
-        Welcome to the very start of your React Native journey! If you're
-        looking for environment setup instructions, they've moved to
-        <span class="underline">their own section.</span> their own section.
-        Continue reading for an introduction to the documentation, Native
-        Components, React, and more!
-      </p>
+    <main class="main">
+      <aside class="aside">
+        <a class="aside-item" href="#Introduction">Introduction</a>
+        <a class="aside-item" href="#core">core components</a>
+        <a class="aside-item" href="#react">react fundamentals</a>
+        <a class="aside-item" href="#handling">handling text input</a>
+      </aside>
 
-      <div class="title-text">
-        <h2 class="title">core components</h2>
-        <sup class="subtitle">Chapter 2</sup>
-      </div>
-      <p class="text">
-        React Native is an open source framework for building Android and iOS
-        applications using React and the app platform’s native capabiles. With
-        React Native, you use JavaScript to access your platform’s APIs as well
-        as to describe the appearance and behavior of your UI using React
-        components:
-        <span class="italic">bundles of reusable, nestable code.</span> You can
-        learn more about React in the next section. But first, let’s cover how
-        components work in React Native.
-      </p>
+      <a name="Introduction"></a>
+      <br />
 
-      <div class="title-text">
-        <h2 class="title">react fundamentals</h2>
-        <sup class="subtitle">Chapter 3</sup>
-      </div>
-      <p class="text">
-        React Native runs on <span class="underline">React</span> , a popular
-        open source library for building user interfaces with JavaScript. To
-        make the most of React Native, it helps to understand React itself. This
-        section can get you started or can serve as a refresher course.
-      </p>
-      <p class="text">We’re going to cover the core concepts behind React:</p>
-      <p class="text">
-        <span class="fatty">+ components.</span> The rest of this introduction
-        to React uses cats in its examples: friendly, approachable creatures
-        that need names and a cafe to work in.
-      </p>
-      <p class="text">
-        <span class="fatty">+ JSX.</span> React and React Native use JSX, a
-        syntax that lets you write elements inside JavaScript like so:
-        <span class="span"
-          >&lt;Text&gt;Hello, I am your cat!&lt;/Text&gt;.</span
-        >
-      </p>
-      <p class="text">
-        The React docs have a comprehensive guide to JSX you can refer to learn
-        even more. Because JSX is JavaScript, you can use variables inside it.
-        Here you are declaring a <span class="span">name</span> for the cat,
-        name, and embedding it with curly braces inside
-        <span class="span">&lt;Text&gt;</span>
-      </p>
-      <p class="text">
-        <span class="fatty">+ props.</span> Props is short for “properties”.
-      </p>
-      <p class="text">
-        <span class="fatty">+ state.</span> While you can think of props as
-        arguments you use to configure how components render, state is like a
-        component’s personal data storage. State is useful for handling data
-        that changes over time or that comes from user interaction. State gives
-        your components memory!
-      </p>
+      <section class="text-hero">
+        <div class="title-text">
+          <h2 class="title">Introduction</h2>
+          <sup class="subtitle"> Chapter 1</sup>
+        </div>
+        <p class="text">
+          Welcome to the very start of your React Native journey! If you're
+          looking for environment setup instructions, they've moved to
+          <span class="underline">their own section.</span> their own section.
+          Continue reading for an introduction to the documentation, Native
+          Components, React, and more!
+        </p>
 
-      <div class="title-text">
-        <h2 class="title">handling text input</h2>
-        <sup class="subtitle">Chapter 4</sup>
-      </div>
-      <p class="text">
-        TextInput is a Core Component that allows the user to enter text. It has
-        an <span class="italic">onChangeText</span> prop that takes a function
-        to be called every time the text changed, and an onSubmitEditing prop
-        that takes a function to be called when the text is submitted.
-      </p>
-      <p class="text">
-        For example, let's say that as the user types, you're translating their
-        words into a different language. In this new language, every single word
-        is written the same way: 🍕. So the sentence "Hello there Bob" would be
-        translated as "🍕 🍕".
-      </p>
+        <a name="core"></a>
+        <br />
+
+        <div class="title-text">
+          <h2 class="title">core components</h2>
+          <sup class="subtitle">Chapter 2</sup>
+        </div>
+        <p class="text">
+          React Native is an open source framework for building Android and iOS
+          applications using React and the app platform’s native capabiles. With
+          React Native, you use JavaScript to access your platform’s APIs as
+          well as to describe the appearance and behavior of your UI using React
+          components:
+          <span class="italic">bundles of reusable, nestable code.</span> You
+          can learn more about React in the next section. But first, let’s cover
+          how components work in React Native.
+        </p>
+
+        <a name="react"></a>
+        <br />
+
+        <div class="title-text">
+          <h2 class="title">react fundamentals</h2>
+          <sup class="subtitle">Chapter 3</sup>
+        </div>
+        <p class="text">
+          React Native runs on <span class="underline">React</span> , a popular
+          open source library for building user interfaces with JavaScript. To
+          make the most of React Native, it helps to understand React itself.
+          This section can get you started or can serve as a refresher course.
+        </p>
+        <p class="text">We’re going to cover the core concepts behind React:</p>
+        <p class="text">
+          <span class="fatty">+ components.</span> The rest of this introduction
+          to React uses cats in its examples: friendly, approachable creatures
+          that need names and a cafe to work in.
+        </p>
+        <p class="text">
+          <span class="fatty">+ JSX.</span> React and React Native use JSX, a
+          syntax that lets you write elements inside JavaScript like so:
+          <span class="span"
+            >&lt;Text&gt;Hello, I am your cat!&lt;/Text&gt;.</span
+          >
+        </p>
+        <p class="text">
+          The React docs have a comprehensive guide to JSX you can refer to
+          learn even more. Because JSX is JavaScript, you can use variables
+          inside it. Here you are declaring a <span class="span">name</span> for
+          the cat, name, and embedding it with curly braces inside
+          <span class="span">&lt;Text&gt;</span>
+        </p>
+        <p class="text">
+          <span class="fatty">+ props.</span> Props is short for “properties”.
+        </p>
+        <p class="text">
+          <span class="fatty">+ state.</span> While you can think of props as
+          arguments you use to configure how components render, state is like a
+          component’s personal data storage. State is useful for handling data
+          that changes over time or that comes from user interaction. State
+          gives your components memory!
+        </p>
+
+        <a name="handling">handling text input</a>
+        <br />
+
+        <div class="title-text">
+          <h2 class="title">handling text input</h2>
+          <sup class="subtitle">Chapter 4</sup>
+        </div>
+        <p class="text">
+          TextInput is a Core Component that allows the user to enter text. It
+          has an <span class="italic">onChangeText</span> prop that takes a
+          function to be called every time the text changed, and an
+          onSubmitEditing prop that takes a function to be called when the text
+          is submitted.
+        </p>
+        <p class="text">
+          For example, let's say that as the user types, you're translating
+          their words into a different language. In this new language, every
+          single word is written the same way: 🍕. So the sentence "Hello there
+          Bob" would be translated as "🍕 🍕".
+        </p>
+      </section>
+
+      <footer>
+        <div></div>
+        <div class="grid">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
