--- a/index.html
+++ b/index.html
@@ -134,20 +134,86 @@
           Bob" would be translated as "🍕 🍕".
         </p>
       </section>
-
-      <footer>
-        <div></div>
-        <div class="grid">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-      </footer>
     </main>
+
+    <footer>
+      <div class="footer-text">Who’s using</div>
+
+      <div class="container">
+        <div class="wrap">
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/facebook-logo.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/facebook.svg" alt="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/instagram-logo.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/instagram.svg" alt="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/shopify-logo-white.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/shopify (hover).svg" alt="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/skype-logo-black.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/skype.svg" alt="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/pinterest.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/pinterest.svg" alt="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/wix.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/wix.svg" alt="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/saleforse.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/saleforse.svg" alt="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="front">
+              <img src="/images/white logo/soundcloud.svg" alt="" />
+            </div>
+            <div class="back">
+              <img src="/images/black logo/soundcloud.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
